    - Recover from bad tracked-since value in MTBF-history file.
      Should fix bug 537.
    - If we're trying to flush the last bytes on a connection (for
      example, when answering a directory request), reset the
      time-to-give-up timeout every time we manage to write something
      on the socket. Bugfix on 0.1.2.x.

  o Code simplifications and refactoring:
    - Remove the tor_strpartition function: its logic was confused,
      and it was only used for one thing that could be implemented far
      more easily.


Changes in version 0.2.0.19-alpha - 2008-02-09
  Tor 0.2.0.19-alpha makes more progress towards normalizing Tor's TLS
  handshake, makes path selection for relays more secure and IP address
  guessing more robust, and generally fixes a lot of bugs in preparation
  for calling the 0.2.0 branch stable.

  o Major features:
    - Do not include recognizeable strings in the commonname part of
      Tor's x509 certificates.

  o Major bugfixes:
    - If we're a relay, avoid picking ourselves as an introduction point,
      a rendezvous point, or as the final hop for internal circuits. Bug
      reported by taranis and lodger. Bugfix on 0.1.2.x.
    - Patch from "Andrew S. Lists" to catch when we contact a directory
      mirror at IP address X and he says we look like we're coming from
      IP address X. Bugfix on 0.1.2.x.

  o Minor features (security):
    - Be more paranoid about overwriting sensitive memory on free(),
      as a defensive programming tactic to ensure forward secrecy.

  o Minor features (directory authority):
    - Actually validate the options passed to AuthDirReject,
      AuthDirInvalid, AuthDirBadDir, and AuthDirBadExit.
    - Reject router descriptors with out-of-range bandwidthcapacity or
      bandwidthburst values.

  o Minor features (controller):
    - Reject controller commands over 1MB in length.  This keeps rogue
      processes from running us out of memory.

  o Minor features (misc):